--- a/internal/site/src/locales/pt/pt.po
+++ b/internal/site/src/locales/pt/pt.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: beszel\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-11-01 11:30-0400\n"
-"PO-Revision-Date: 2026-02-25 23:34-0300\n"
+"PO-Revision-Date: 2026-02-25 23:56-0300\n"
 "Last-Translator: \n"
 "Language-Team: Portuguese\n"
 "Language: pt\n"
@@ -188,6 +188,10 @@ msgstr "Tem certeza de que deseja excluir {name}?"
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "Are you sure?"
 msgstr "Tem certeza?"
+
+#: src/components/add-system.tsx
+msgid "Auto Container Alias"
+msgstr "Apelido automático de container "
 
 #: src/components/copy-to-clipboard.tsx
 msgid "Automatic copy requires a secure context."
@@ -1769,6 +1773,10 @@ msgstr "Uso"
 #: src/components/routes/system.tsx
 msgid "Usage of root partition"
 msgstr "Uso da partição raiz"
+
+#: src/components/add-system.tsx
+msgid "Use variables like $LABEL_KEY to build aliases from container labels."
+msgstr "Use variáveis como $LABEL_KEY para construir apelidos a partir de etiquetas de container."
 
 #: src/components/charts/mem-chart.tsx
 #: src/components/charts/swap-chart.tsx
